begin quiz complete, 1st Q landing

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				<form>
 					<input class="beginButton" type="submit" value="Begin">
 				</form>
-				<p class= "questionNumber">
-				<span class="number">Question #</span> <span class="flagDescription">Flag Description</span>
+				<p class= "questionNumber">#
+				<span class="number"></span> <span class="flagDescription">Flag Description</span>
 				</p>
 			</section>
 			<section class= imageBox>
@@ -26,12 +26,12 @@
 			</section>
 			<section class= answerBox>
 				<form class="answerForm">
-					<label><input class="answer" type="checkbox" name="Answer1"> Answer 1</label><br>
-					<label><input class="answer" type="checkbox" name="Answer2"> Answer 2</label><br>
-					<label><input class="answer" type="checkbox" name="Answer3"> Answer 3</label><br>
-					<label><input class="answer" type="checkbox" name="Answer4"> Answer 4</label><br>
+					<label><input class="answer" type="checkbox" id="Answer1"> <span class="answer1"></span></label><br>
+					<label><input class="answer" type="checkbox" id="Answer2"> <span class="answer2"></span></label><br>
+					<label><input class="answer" type="checkbox" id="Answer3"> <span class="answer3"></span></label><br>
+					<label><input class="answer" type="checkbox" id="Answer4"> <span class="answer4"></span></label><br>
 					<div class="submitContainer">
-						<input class= "submitButton" type="submit" value="Submit">
+						<input class= "submitButton" type="button" value="Submit">
 					</div>
 				</form>
 			</section>
