Questions 1-3 added w/bug

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 				</form>
 			</section>
 		<div class="container feedback">
-			<h6 class="correct"># Correct<span class="numCorrect"> 0</span></h6>
-			<h6 class="wrong"># Incorrect<span class="=numWrong"> 0</span></h6>
+			<h6 class="correct"># Correct <span class="numCorrect"></span></h6>
+			<h6 class="wrong"># Incorrect <span class="numWrong"></span></h6>
 		</div>
 		
 		<script src="http://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
