Style completed, Quiz functioning

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="modal">
 				<div class="modal-content">
 					<p class="answer-feedback"></p>
-					<input class="OK-button" type="button" value="OK">
+					<input class="ok-button" type="button" value="OK">
 				</div>
 			</div>
 			<div class="feedback">
