Opening Headline edit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<h1>The Flags of Motorsport Quiz</h1>
 			</section>
 			<section class= "questionBox">
-				<h3 class= "question">Welcom to the Flags of Motorsport Quiz. Do you know the meaing behind each flag that is waving at a starter stand or corner station? Let's find out!! Click Begin to start the quiz. Keep in mind there may be more than one correct answer for each question. Good Luck!!</h3>
+				<h3 class= "question">Welcom to the Flags of Motorsport Quiz. Do you know the meaing behind each flag that is waving at a starter stand or corner station? Let's find out!! Click Begin to start the quiz. Good Luck!!</h3>
 				<div class="beginContainer">
 				<form>
 					<input class="beginButton" type="submit" value="Begin">
