try again button added, not working

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
 					<input class="ok-button" type="button" value="OK">
 				</div>
 			</div>
+			<div class="new-modal">
+				<div class="modal-content">
+					<p class="answer-feedback"></p>
+					<input class="try-button" type="button" value="Try Again">
+				</div>
+			</div>
 			<div class="feedback">
 				<div class="feedback-inline">			
 					<h6>#Correct <span class="numCorrect"></span> #Incorrect <span class="numWrong"></span></h6>
